--- a/image_enhancing.ipynb
+++ b/image_enhancing.ipynb
@@ -6,7 +6,12 @@
       "name": "image_enhancing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "LBGty4O_0ukJ",
+        "KF_tHde-p3rn",
+        "ycrCTvmlqBMD",
+        "hbIJaHEdv6ad"
+      ],
       "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
@@ -57,7 +62,7 @@
         "id": "LBGty4O_0ukJ"
       },
       "source": [
-        "**Preparing Environment**"
+        "#### Preparing Environment"
       ]
     },
     {
@@ -114,7 +119,7 @@
         "id": "KF_tHde-p3rn"
       },
       "source": [
-        "**Defining Helper Functions**"
+        "#### Defining Helper Functions"
       ]
     },
     {
@@ -170,39 +175,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "ycrCTvmlqBMD"
-      },
-      "source": [
-        "#### Download the model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "ouwEyKLA0ulO",
-        "colab": {}
-      },
-      "source": [
-        "model = hub.load(SAVED_MODEL_PATH)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "tuKu18UYptkx"
-      },
-      "source": [
-        "### Evaluating Performance of the Model"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -241,6 +213,29 @@
         "  lr_image = tf.expand_dims(lr_image, 0)\n",
         "  lr_image = tf.cast(lr_image, tf.float32)\n",
         "  return lr_image"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "ycrCTvmlqBMD"
+      },
+      "source": [
+        "#### Download the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "ouwEyKLA0ulO",
+        "colab": {}
+      },
+      "source": [
+        "model = hub.load(SAVED_MODEL_PATH)"
       ],
       "execution_count": null,
       "outputs": []
